	* rate limited DHT send socket
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter
	* added support for bitcomet padding files
	* improved support for sparse files on windows

release 0.14.4

	* connect candidate calculation fix
	* tightened up disk cache memory usage
	* fixed magnet link parser to accept hex-encoded info-hashes
	* fixed inverted logic when picking which peers to connect to
	  (should mean a slight performance improvement)
	* fixed a bug where a failed rename_file() would leave the storage
	  in an error state which would pause the torrent
	* fixed case when move_storage() would fail. Added a new alert
	  to be posted when it does
	* fixed crash bug when shutting down while checking a torrent
	* fixed handling of web seed urls that didn't end with a
	  slash for multi-file torrents
	* lowered the default connection speed to 10 connection attempts
	  per second
	* optimized memory usage when checking files fails
	* fixed bug when checking a torrent twice
	* improved handling of out-of-memory conditions in disk I/O thread
	* fixed bug when force-checking a torrent with partial pieces

release 0.14.3

	* added python binding for create_torrent
	* fixed boost-1.38 build
	* fixed bug where web seeds would be connected before the files
	  were checked
	* fixed filename bug when using wide characters
	* fixed rare crash in peer banning code
	* fixed potential HTTP compatibility issue
	* fixed UPnP crash
	* fixed UPnP issue where the control url contained the base url
	* fixed a replace_trackers bug
	* fixed bug where the DHT port mapping would not be removed when
	  changing DHT port
	* fixed move_storage bug when files were renamed to be moved out
	  of the root directory
	* added error handling for set_piece_hashes
	* fixed missing include in enum_if.cpp