@@ -37,6 +37,7 @@ void bind_session_settings()
         .def_readwrite("active_downloads", &session_settings::active_downloads)
         .def_readwrite("active_seeds", &session_settings::active_seeds)
         .def_readwrite("active_limit", &session_settings::active_limit)
+        .def_readwrite("auto_manage_prefer_seeds", &session_settings::auto_manage_prefer_seeds)
         .def_readwrite("dont_count_slow_torrents", &session_settings::dont_count_slow_torrents)
         .def_readwrite("auto_manage_interval", &session_settings::auto_manage_interval)
         .def_readwrite("share_ratio_limit", &session_settings::share_ratio_limit)
